Use add-opens to allow dangerous reflection in testing